--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,347 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+    --xLight: rgb(243, 242, 242);
+    --light: rgb(233, 232, 232);
+    --dark: rgb(110, 110, 110);
+    --xDark: rgb(58, 58, 58);
+    --primary: yellow;
+    --secondary: rgb(241, 47, 122);
+    --alert: rgb(255, 0, 21);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial Narrow', Arial, sans-serif;
 }
+
+body{
+    background-color: var(--xLight);
+}
+
+.container{
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+}
+
+#tracker-header{
+    color: var(--dark);
+    padding: 1.5rem 1rem;
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+#net{
+    background: var(--light);
+    font-size: 2rem;
+    padding: 0.6rem 1.5rem;
+    border-radius: 7px;
+    font-weight: 700;
+}
+
+#tracker-main{
+    padding: 1rem;
+}
+
+form{
+    position: relative;
+    background: #fff;
+    border-radius: 5px;
+    margin-bottom: 2rem;
+}
+
+form:before{
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    z-index: -1;  
+    border-radius: 5px;
+    transition: 0.2s;
+}
+
+form:focus-within:before{
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+}
+
+.input-group{
+    margin: auto;
+    display: flex;
+    position: relative; 
+}
+
+.input-group input{
+    padding: 0 0.7rem;
+    border: none;
+    outline: none;
+    background: transparent;
+    height: 3rem;
+}
+
+.btn{
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.input-group [type="submit"]{
+    background: linear-gradient(90deg, var(--primary) 50%, var(--primary) 50%, var(--secondary))  0 0/200%;
+    transition: 0.3s;
+    color: var(--dark);
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.input-group [type="submit"]:hover{
+    background: linear-gradient(90deg, var(--primary) 50%, var(--secondary))  100%/200%;
+    color: var(--light);
+}
+
+#income-table {
+    width: 100%;
+}
+
+#income-table tr{
+    margin-bottom: 1rem;
+    display: flex;
+    border-radius: 5px;
+    line-height: 3rem;
+    background-color: #fff;
+    color: var(--dark);
+    transition: 0.3s;
+}
+
+#income-table tr:hover{
+    color: var(--xDark);
+}
+
+#income-table td:nth-child(2){
+    padding: 0 0.5rem;
+}
+
+#income-table  td{
+    text-align: center;
+}
+
+#income-table .delete-btn{
+    background-color: var(--alert);
+    color: var(--xLight);
+}
+
+.simple-btn{
+    background-color: var(--light);
+    color: var(--xDark);
+    padding: 0.5rem;
+    border-radius: 5px;
+    box-shadow: 0 0 2px 1px var(--dark);
+}
+
+/* ----------------------------- media */
+/* ----------------------------- 1 */
+@media screen and (max-width:576px){
+    html{
+      font-size: 13px;
+    }
+
+    #tracker-header{
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+
+    #net{
+        margin-top: 1rem;
+    }
+
+    form:before{
+        background: linear-gradient(180deg, var(--primary), var(--secondary));
+    }
+
+    .input-group{
+        flex-flow: column nowrap;
+    }
+
+    .input-group [type="submit"]{
+        border-radius: 0 0 5px 5px;
+    }
+
+    #income-table tr{
+        flex-flow: column nowrap;
+    }
+
+    #income-table td:nth-child(1){
+        order: 1;
+    }
+
+    #income-table td:nth-child(1) button{
+        background-color: var(--alert);
+        border: none;
+        outline: none;
+        width: 3rem;
+        height: 2rem;
+        border-radius:5px ;
+        color: var(--xLight);
+        transition: 0.3s;
+        cursor: pointer;
+    }
+
+    #income-table td:nth-child(2){
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+  }
+  
+  /* ----------------------------- 2 */
+  @media screen and (min-width:576px) and (max-width:769px){
+    html{
+      font-size: 15px;
+    }
+    
+    #tracker-header{
+        justify-content: space-between;
+    }
+
+    form:before{
+        background: linear-gradient(90deg, var(--primary), var(--secondary));
+    }
+
+    .input-group{
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    input[type="text"]{
+        flex: 1 1 30%;
+    }
+    
+    input[type="number"]{
+        flex: 1 1 23%;
+    }
+    
+    input[type="date"]{
+        flex: 1 1 27%;
+    }
+    
+    input[type="submit"]{
+        flex: 1 1 10%;
+        border-radius: 0 5px 5px 0;
+    }
+
+    #income-table tr{
+      flex-flow: row nowrap;
+    }
+
+    #income-table td:nth-child(1) button{
+        width: 100%;
+        height: 100%;
+        border-radius: 5px 0 0 5px;
+        transform: scaleX(0);
+        transform-origin: 0 center;
+        transition: 0.3s;
+    }
+
+    #income-table tr:hover td:nth-child(1) button{
+        transform: scale(1);
+    }
+
+    #income-table td:nth-child(2){
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    #income-table td:nth-child(1){
+        flex: 0 0 7%;
+    }
+     
+    #income-table td:nth-child(2){
+        flex: 0 0 66%;
+        padding-left: 0.5rem;
+    }
+     
+    #income-table td:nth-child(3){
+        flex: 0 0 14%;
+}
+     
+    #income-table td:nth-child(4){
+        flex: 0 0 13%;
+    }
+  }
+  /* ----------------------------- 3 */
+  @media screen and (min-width:769px){
+    html{
+      font-size: 16px;
+    }
+
+    #tracker-header{
+        justify-content: space-between;
+    }
+
+    form:before{
+        background: linear-gradient(90deg, var(--primary), var(--secondary));
+    }
+
+    .input-group{
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    input[type="text"]{
+        flex: 1 1 36%;
+    }
+    
+    input[type="number"]{
+        flex: 1 1 22%;
+    }
+    
+    input[type="date"]{
+        flex: 1 1 22%;
+    }
+    
+    input[type="submit"]{
+        flex: 1 1 10%;
+        border-radius: 0 5px 5px 0;
+}
+     
+    #income-table td:nth-child(1){
+        flex: 1 1 3%;
+    }
+     
+    #income-table td:nth-child(2){
+        flex: 1 1 65%;
+        padding-left: 0.7em;
+    }
+
+    #income-table td:nth-child(1) button{
+        width: 100%;
+        height: 100%;
+        border-radius: 5px 0 0 5px;
+        transform: scaleX(0);
+        transform-origin: 0 center;
+        transition: 0.3s;
+    }
+
+    #income-table tr:hover td:nth-child(1) button{
+        transform: scale(1);
+    }
+
+    #income-table td:nth-child(2){
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+     
+    #income-table td:nth-child(3){
+        flex: 1 1 10%;
+    }
+     
+    #income-table td:nth-child(4){
+        flex: 1 1 10%;
+    }
+  }
